--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Anas Khalifah\AppData\Local\Temp\testng-eclipse--739474589\testng-customsuite.xml</span>
+                    <span>C:\Users\Anas Khalifah\AppData\Local\Temp\testng-eclipse--1321665136\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">12 methods,   12 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -134,7 +134,32 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="hotelsBtnAndSearch">hotelsBtnAndSearch</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="lowestPriceSortingTest">lowestPriceSortingTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="pageLanguageTest">pageLanguageTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="pageLoadedSuccessfully">pageLoadedSuccessfully</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="qitafLogoTest">qitafLogoTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="homePage.MyTestCases" class="method navigator-link" hash-for-method="selectNumberOfVisitors">selectNumberOfVisitors</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -199,9 +224,44 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="hotelsBtnAndSearch">
+                  </a> <!-- hotelsBtnAndSearch -->
+                  <span class="method-name">hotelsBtnAndSearch</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="lowestPriceSortingTest">
+                  </a> <!-- lowestPriceSortingTest -->
+                  <span class="method-name">lowestPriceSortingTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="pageLanguageTest">
+                  </a> <!-- pageLanguageTest -->
+                  <span class="method-name">pageLanguageTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="pageLoadedSuccessfully">
+                  </a> <!-- pageLoadedSuccessfully -->
+                  <span class="method-name">pageLoadedSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="qitafLogoTest">
                   </a> <!-- qitafLogoTest -->
                   <span class="method-name">qitafLogoTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="selectNumberOfVisitors">
+                  </a> <!-- selectNumberOfVisitors -->
+                  <span class="method-name">selectNumberOfVisitors</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -209,7 +269,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Anas Khalifah\AppData\Local\Temp\testng-eclipse--739474589\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Anas Khalifah\AppData\Local\Temp\testng-eclipse--1321665136\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -258,40 +318,60 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(12);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'defaultLanguageEnglishTest')
+data.setCell(0, 1, 'pageLoadedSuccessfully')
 data.setCell(0, 2, 'homePage.MyTestCases')
-data.setCell(0, 3, 41);
+data.setCell(0, 3, 14035);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'defaultCurrencyTest')
+data.setCell(1, 1, 'selectNumberOfVisitors')
 data.setCell(1, 2, 'homePage.MyTestCases')
-data.setCell(1, 3, 26);
+data.setCell(1, 3, 5073);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'qitafLogoTest')
+data.setCell(2, 1, 'pageLanguageTest')
 data.setCell(2, 2, 'homePage.MyTestCases')
-data.setCell(2, 3, 25);
+data.setCell(2, 3, 2030);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'hotelSearchIsNotSelected')
+data.setCell(3, 1, 'lowestPriceSortingTest')
 data.setCell(3, 2, 'homePage.MyTestCases')
-data.setCell(3, 3, 23);
+data.setCell(3, 3, 999);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'flightReturnDate')
+data.setCell(4, 1, 'hotelsBtnAndSearch')
 data.setCell(4, 2, 'homePage.MyTestCases')
-data.setCell(4, 3, 23);
+data.setCell(4, 3, 601);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'contactNumberTest')
+data.setCell(5, 1, 'defaultLanguageEnglishTest')
 data.setCell(5, 2, 'homePage.MyTestCases')
-data.setCell(5, 3, 22);
+data.setCell(5, 3, 37);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'flightDepartureDate')
+data.setCell(6, 1, 'defaultCurrencyTest')
 data.setCell(6, 2, 'homePage.MyTestCases')
-data.setCell(6, 3, 21);
+data.setCell(6, 3, 35);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'hotelSearchIsNotSelected')
+data.setCell(7, 2, 'homePage.MyTestCases')
+data.setCell(7, 3, 33);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'qitafLogoTest')
+data.setCell(8, 2, 'homePage.MyTestCases')
+data.setCell(8, 3, 32);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'contactNumberTest')
+data.setCell(9, 2, 'homePage.MyTestCases')
+data.setCell(9, 3, 27);
+data.setCell(10, 0, 10)
+data.setCell(10, 1, 'flightReturnDate')
+data.setCell(10, 2, 'homePage.MyTestCases')
+data.setCell(10, 3, 26);
+data.setCell(11, 0, 11)
+data.setCell(11, 1, 'flightDepartureDate')
+data.setCell(11, 2, 'homePage.MyTestCases')
+data.setCell(11, 3, 23);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 181 ms</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -324,31 +404,51 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">defaultLanguageEnglishTest</span>
-                <span class="method-start">9267 ms</span>
+                <span class="method-start">5457 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">defaultCurrencyTest</span>
-                <span class="method-start">9311 ms</span>
+                <span class="method-start">5498 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">contactNumberTest</span>
-                <span class="method-start">9339 ms</span>
+                <span class="method-start">5534 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">qitafLogoTest</span>
-                <span class="method-start">9362 ms</span>
+                <span class="method-start">5563 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">hotelSearchIsNotSelected</span>
-                <span class="method-start">9388 ms</span>
+                <span class="method-start">5597 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">flightDepartureDate</span>
-                <span class="method-start">9412 ms</span>
+                <span class="method-start">5631 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">flightReturnDate</span>
-                <span class="method-start">9435 ms</span>
+                <span class="method-start">5656 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">pageLanguageTest</span>
+                <span class="method-start">5684 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">hotelsBtnAndSearch</span>
+                <span class="method-start">7715 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">selectNumberOfVisitors</span>
+                <span class="method-start">8318 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">pageLoadedSuccessfully</span>
+                <span class="method-start">13392 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">lowestPriceSortingTest</span>
+                <span class="method-start">27428 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
