--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.contactNumberTest()[pri:3, instance:homePage.MyTestCases@6f152006]">contactNumberTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.contactNumberTest()[pri:3, instance:homePage.MyTestCases@3a6f2de3]">contactNumberTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.defaultCurrencyTest()[pri:2, instance:homePage.MyTestCases@6f152006]">defaultCurrencyTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.defaultCurrencyTest()[pri:2, instance:homePage.MyTestCases@3a6f2de3]">defaultCurrencyTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>-72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.defaultLanguageEnglishTest()[pri:1, instance:homePage.MyTestCases@6f152006]">defaultLanguageEnglishTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>-77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.defaultLanguageEnglishTest()[pri:1, instance:homePage.MyTestCases@3a6f2de3]">defaultLanguageEnglishTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.flightDepartureDate()[pri:6, instance:homePage.MyTestCases@6f152006]">flightDepartureDate</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>97</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.flightDepartureDate()[pri:6, instance:homePage.MyTestCases@3a6f2de3]">flightDepartureDate</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.flightReturnDate()[pri:6, instance:homePage.MyTestCases@6f152006]">flightReturnDate</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.flightReturnDate()[pri:7, instance:homePage.MyTestCases@3a6f2de3]">flightReturnDate</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.hotelSearchIsNotSelected()[pri:5, instance:homePage.MyTestCases@6f152006]">hotelSearchIsNotSelected</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.hotelSearchIsNotSelected()[pri:5, instance:homePage.MyTestCases@3a6f2de3]">hotelSearchIsNotSelected</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:38</td>   <td>-9336</td> <td>&nbsp;</td><td title="&gt;&gt;MyTestCases.mySetUp()[pri:0, instance:homePage.MyTestCases@6f152006]">&gt;&gt;mySetUp</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:08</td>   <td>2181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.hotelsBtnAndSearch()[pri:9, instance:homePage.MyTestCases@3a6f2de3]">hotelsBtnAndSearch</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:28</td>   <td>21894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.lowestPriceSortingTest()[pri:12, instance:homePage.MyTestCases@3a6f2de3]">lowestPriceSortingTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:00</td>   <td>-5530</td> <td>&nbsp;</td><td title="&gt;&gt;MyTestCases.mySetUp()[pri:0, instance:homePage.MyTestCases@3a6f2de3]">&gt;&gt;mySetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>24/09/05 08:07:47</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.qitafLogoTest()[pri:4, instance:homePage.MyTestCases@6f152006]">qitafLogoTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.pageLanguageTest()[pri:8, instance:homePage.MyTestCases@3a6f2de3]">pageLanguageTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:14</td>   <td>7858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.pageLoadedSuccessfully()[pri:11, instance:homePage.MyTestCases@3a6f2de3]">pageLoadedSuccessfully</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:06</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.qitafLogoTest()[pri:4, instance:homePage.MyTestCases@3a6f2de3]">qitafLogoTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>24/09/07 11:12:09</td>   <td>2784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.selectNumberOfVisitors()[pri:10, instance:homePage.MyTestCases@3a6f2de3]">selectNumberOfVisitors</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
