--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,20 +9,54 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">12</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">28,434</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">11</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">43,251</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="12">homePage.MyTestCases</td><td><a href="#m0">contactNumberTest</a></td><td rowspan="1">1725696726496</td><td rowspan="1">27</td></tr><tr class="passedeven"><td><a href="#m1">defaultCurrencyTest</a></td><td rowspan="1">1725696726460</td><td rowspan="1">35</td></tr><tr class="passedeven"><td><a href="#m2">defaultLanguageEnglishTest</a></td><td rowspan="1">1725696726419</td><td rowspan="1">37</td></tr><tr class="passedeven"><td><a href="#m3">flightDepartureDate</a></td><td rowspan="1">1725696726593</td><td rowspan="1">23</td></tr><tr class="passedeven"><td><a href="#m4">flightReturnDate</a></td><td rowspan="1">1725696726618</td><td rowspan="1">26</td></tr><tr class="passedeven"><td><a href="#m5">hotelSearchIsNotSelected</a></td><td rowspan="1">1725696726559</td><td rowspan="1">33</td></tr><tr class="passedeven"><td><a href="#m6">hotelsBtnAndSearch</a></td><td rowspan="1">1725696728677</td><td rowspan="1">601</td></tr><tr class="passedeven"><td><a href="#m7">lowestPriceSortingTest</a></td><td rowspan="1">1725696748390</td><td rowspan="1">999</td></tr><tr class="passedeven"><td><a href="#m8">pageLanguageTest</a></td><td rowspan="1">1725696726646</td><td rowspan="1">2030</td></tr><tr class="passedeven"><td><a href="#m9">pageLoadedSuccessfully</a></td><td rowspan="1">1725696734354</td><td rowspan="1">14035</td></tr><tr class="passedeven"><td><a href="#m10">qitafLogoTest</a></td><td rowspan="1">1725696726525</td><td rowspan="1">32</td></tr><tr class="passedeven"><td><a href="#m11">selectNumberOfVisitors</a></td><td rowspan="1">1725696729280</td><td rowspan="1">5073</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">homePage.MyTestCases</td><td><a href="#m0">pageLoadedSuccessfully</a></td><td rowspan="1">1725701406483</td><td rowspan="1">12588</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="11">homePage.MyTestCases</td><td><a href="#m1">contactNumberTest</a></td><td rowspan="1">1725701397548</td><td rowspan="1">26</td></tr><tr class="passedeven"><td><a href="#m2">defaultCurrencyTest</a></td><td rowspan="1">1725701397517</td><td rowspan="1">30</td></tr><tr class="passedeven"><td><a href="#m3">defaultLanguageEnglishTest</a></td><td rowspan="1">1725701397365</td><td rowspan="1">148</td></tr><tr class="passedeven"><td><a href="#m4">flightDepartureDate</a></td><td rowspan="1">1725701397626</td><td rowspan="1">21</td></tr><tr class="passedeven"><td><a href="#m5">flightReturnDate</a></td><td rowspan="1">1725701397648</td><td rowspan="1">22</td></tr><tr class="passedeven"><td><a href="#m6">hotelSearchIsNotSelected</a></td><td rowspan="1">1725701397602</td><td rowspan="1">22</td></tr><tr class="passedeven"><td><a href="#m7">hotelsBtnAndSearch</a></td><td rowspan="1">1725701399797</td><td rowspan="1">682</td></tr><tr class="passedeven"><td><a href="#m8">lowestPriceSortingTest</a></td><td rowspan="1">1725701419074</td><td rowspan="1">722</td></tr><tr class="passedeven"><td><a href="#m9">pageLanguageTest</a></td><td rowspan="1">1725701397671</td><td rowspan="1">2123</td></tr><tr class="passedeven"><td><a href="#m10">qitafLogoTest</a></td><td rowspan="1">1725701397575</td><td rowspan="1">25</td></tr><tr class="passedeven"><td><a href="#m11">selectNumberOfVisitors</a></td><td rowspan="1">1725701400480</td><td rowspan="1">6001</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">homePage.MyTestCases#contactNumberTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">homePage.MyTestCases#defaultCurrencyTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">homePage.MyTestCases#defaultLanguageEnglishTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">homePage.MyTestCases#flightDepartureDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">homePage.MyTestCases#flightReturnDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">homePage.MyTestCases#hotelSearchIsNotSelected</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">homePage.MyTestCases#hotelsBtnAndSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">homePage.MyTestCases#lowestPriceSortingTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">homePage.MyTestCases#pageLanguageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">homePage.MyTestCases#pageLoadedSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">homePage.MyTestCases#pageLoadedSuccessfully</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
+	at org.testng.Assert.assertEquals(Assert.java:122)
+	at org.testng.Assert.assertEquals(Assert.java:819)
+	at org.testng.Assert.assertEquals(Assert.java:829)
+	at homePage.MyTestCases.pageLoadedSuccessfully(MyTestCases.java:129)
+	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">homePage.MyTestCases#contactNumberTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">homePage.MyTestCases#defaultCurrencyTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">homePage.MyTestCases#defaultLanguageEnglishTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">homePage.MyTestCases#flightDepartureDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">homePage.MyTestCases#flightReturnDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">homePage.MyTestCases#hotelSearchIsNotSelected</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">homePage.MyTestCases#hotelsBtnAndSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">homePage.MyTestCases#lowestPriceSortingTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">homePage.MyTestCases#pageLanguageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m10">homePage.MyTestCases#qitafLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m11">homePage.MyTestCases#selectNumberOfVisitors</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
